enterprise/proxy/envoy.yaml
node:
  id: custodia-mesh
  cluster: custodia
static_resources:
  listeners:
    - name: mesh_ingress
      address:
        socket_address: { address: 0.0.0.0, port_value: 8443 }
      per_connection_buffer_limit_bytes: 65536
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              require_client_certificate: true
              common_tls_context:
                tls_params: { tls_minimum_protocol_version: TLSv1_3, tls_maximum_protocol_version: TLSv1_3 }
                tls_certificate_sds_secret_configs:
                  - name: spiffe://custodia.internal/mesh/gateway
                    sds_config:
                      resource_api_version: V3
                      api_config_source:
                        api_type: GRPC
                        transport_api_version: V3
                        grpc_services:
                          - envoy_grpc: { cluster_name: spire_sds }
                combined_validation_context:
                  default_validation_context:
                    match_typed_subject_alt_names:
                      - san_type: URI
                        matcher: { exact: 'spiffe://custodia.internal/workload/backend' }
                  validation_context_sds_secret_config:
                    name: spiffe://custodia.internal
                    sds_config:
                      resource_api_version: V3
                      api_config_source:
                        api_type: GRPC
                        transport_api_version: V3
                        grpc_services:
                          - envoy_grpc: { cluster_name: spire_sds }
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: mesh
                request_timeout: 5s
                stream_idle_timeout: 10s
                max_request_headers_kb: 16
                route_config:
                  name: attestation
                  virtual_hosts:
                    - name: enclave
                      domains: ['*']
                      routes:
                        - match: { path: '/attest' }
                          route: { cluster: hardware_gateway, timeout: 3s }
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: spire_sds
      connect_timeout: 1s
      type: STATIC
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config: { http2_protocol_options: {} }
      load_assignment:
        cluster_name: spire_sds
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    pipe: { path: /run/spire/sockets/agent.sock }
    - name: hardware_gateway
      connect_timeout: 0.5s
      type: STATIC
      circuit_breakers:
        thresholds:
          - max_connections: 64
            max_pending_requests: 64
            max_requests: 64
            max_retries: 0
      load_assignment:
        cluster_name: hardware_gateway
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: 127.0.0.1, port_value: 9080 }
